2014-06-26  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.dg/tree-ssa/interposition.c: New testcase.

2014-06-26  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/56633
	* g++.dg/cpp0x/deleted8.C: New.

2014-06-26  Martin Jambor  <mjambor@suse.cz>

	* g++.dg/simulate-thread/bitfields-2.C: Remove allow-load-data-races
	parameter.
	* g++.dg/simulate-thread/bitfields.C: Likewise.
	* gcc.dg/simulate-thread/strict-align-global.c: Remove
	allow-packed-store-data-races parameter.
	* gcc.dg/simulate-thread/subfields.c: Likewise.
	* gcc.dg/tree-ssa/20050314-1.c: Set parameter allow-store-data-races
	to one.

2014-06-26  Martin Jambor  <mjambor@suse.cz>

	* g++.dg/ipa/pr60600.C: Fix typo.
	* g++.dg/ipa/devirt-25.C: Likewise.

2014-06-26  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/61607
	* gcc.dg/tree-ssa/ssa-dom-thread-5.c: New testcase.

2014-06-26  Vidya Praveen  <vidyapraveen@arm.com>

	* gcc.dg/inline-22.c: Add bind_pic_locally.
	* gcc.dg/inline_4.c: Ditto.
	* gcc.dg/fail_always_inline.c: Ditto.
	* g++.dg/ipa/devirt-25.C: Ditto.

2014-06-26  Vidya Praveen  <vidyapraveen@arm.com>

	* lib/target-support.exp (bind_pic_locally): Save the flags to
	'flags_to_postpone' instead of appending to 'flags'.
	* lib/gcc.exp (gcc_target_compile): Append board_info's multilib_flags
	with flags_to_postpone and revert after target_compile.
	* lib/g++.exp (g++_target_compile): Ditto.
	* lib/gfortran.exp (gfortran_target_compile): Ditto.

2014-06-26  Nick Clifton  <nickc@redhat.com>

	* lib/target-supports.exp (check_effective_target_trapping): Fix
	typo.

2014-06-26  Adam Butcher  <adam@jessamine.co.uk>

	PR c++/61537
	* g++.dg/template/pr61537.C: New testcase.

2014-06-25  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gfortran.dg/default_format_denormal_2.f90:  Remove xfail for
	powerpc*-*-linux*.

2014-06-25  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray_33.f90: New.

2014-06-25  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray/coindexed_1.f90: New.
